Added media query for '#sectionMyReviews.section-listing-reviews' at 'max-width: 499px' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -397,6 +397,10 @@
         flex-wrap: wrap;
         align-items: center;
     }
+
+    #sectionMyReviews.section-listing-reviews {
+        padding-top: 0;
+    }
 }
 
 @media(max-width: 408px) {
