Added '.dash-nav' to '/beginner/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -831,3 +831,8 @@ nav .nav-menu .badge li.selected a {
     font-size: 1.3rem;
     padding: 5px 0;
 }
+
+/* Page - '*'/dashboard.html */
+.section-dash {
+    padding: 0;
+}
