--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -835,4 +835,45 @@ nav .nav-menu .badge li.selected a {
 /* Page - '*'/dashboard.html */
 .section-dash {
     padding: 0;
+    position: relative;
+}
+
+.section-dash .dash-nav {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background: var(--color-background-main);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.section-dash .dash-nav ul {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    padding: 5px 0;
+    overflow-x: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.section-dash .dash-nav ul::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
+}
+
+.section-dash .dash-nav ul li {
+    padding: 5px 8px;
+    margin: 0 2px;
+    height: 35px;
+}
+
+.section-dash .dash-nav ul li:hover {
+    border-bottom: 2px solid var(--color-tertiary);
+}
+
+.section-dash .dash-nav ul li a {
+    text-decoration: none;
+    white-space:nowrap;
 }
