--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -834,7 +834,7 @@ nav .nav-menu .badge li.selected a {
 
 /* Page - '*'/dashboard.html */
 .section-dash {
-    padding: 0;
+    padding: 0 0 25px 0;
     position: relative;
 }
 
@@ -876,4 +876,53 @@ nav .nav-menu .badge li.selected a {
 .section-dash .dash-nav ul li a {
     text-decoration: none;
     white-space:nowrap;
+}
+
+.section-dash .dash-grp {
+    padding: 25px 0 0 0;
+}
+
+.section-dash .dash-grp .grp-label {
+    background: var(--color-primary);
+    padding: 3px 6px;
+    margin: 5px 0;
+    font-size: 1.1rem;
+    font-weight: normal;
+    color: var(--color-font-contrast);
+}
+
+.section-dash .dash-grp .profile {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 20px;
+}
+
+.section-dash .dash-grp .profile span {
+    font-weight: bold;
+}
+
+.section-dash .dash-grp .profile > * {
+    padding: 15px;
+}
+
+.section-dash .dash-grp .profile .profile-1 {
+    text-align: center;
+}
+
+.section-dash .dash-grp .profile .profile-1 img {
+    height: 180px;
+    width: 180px;
+    border-radius: 50%;
+    display: block;
+    margin: 10px auto;
+}
+
+.section-dash .dash-grp .profile .profile-2 ul li {
+    list-style-type: square;
+    margin-left: 20px;
+}
+
+.section-dash .dash-grp .profile .profile-2 .edit {
+    display: inline-block;
+    margin: 10px;
 }
