Fixed bug affecting '.filler' that prevented closing of '.nav-drawer' when clicked in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -135,12 +135,14 @@ nav .nav-menu .badge li.selected a {
 
 /* Filler */
 .filler {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 19;
+    background: rgba(0, 0, 0, 0.2);
+    transition: 1s;
 }
 
 /* Nav drawer */
