Made changes to action buttons in '/lister/manage-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -627,6 +627,10 @@ nav .nav-menu .badge li.selected a {
     border: none;
 }
 
+.section-listing-secondary .panel .listing-actions .btn-grp {
+    margin: auto;
+}
+
 /* Page - /view-listing-unit */
 .section-unit-main .container {
     display: grid;
