Added '#listing-other-actions' to '/lister/view-my-listing.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -737,6 +737,7 @@ nav .nav-menu .badge li.selected a {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    color: var(--color-font);
 }
 
 #listerUnitMain.section-unit-main .title-grp .info-actions {
