Added media queries for '.secondary-nav' for 'max-width: 768px' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -183,7 +183,14 @@
     
     .tickets-categories-user .btn-grp.vertical {
         margin: 0 auto;
+    }
 
+    .secondary-nav {
+        padding-left: 20px;
+    }
+
+    .secondary-nav ul {
+        justify-content: flex-start;
     }
 }
 
