Added HTML markup to '/lister/view-my-listing-unit.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -185,12 +185,10 @@
         margin: 0 auto;
     }
 
-    .secondary-nav {
-        padding-left: 20px;
-    }
-
     .secondary-nav ul {
         justify-content: flex-start;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
