Made changes to HTML markup in '/lister/view-beginner-applications.html' and made corrections to '.section-read' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -172,11 +172,11 @@
         padding-top: 25px;
     }
 
-    #tickets-user-list.section-read.links .panel-grp {
+    #tickets-user-list.section-read .panel-grp {
         grid-template-columns: 1fr;
     }
 
-    #tickets-user-list.section-read.links .panel-grp .panel:last-child {
+    #tickets-user-list.section-read .panel-grp .panel:last-child {
         grid-row: 1;
         grid-column: 1 / span 1;
     }
