--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -1150,7 +1150,7 @@ nav .nav-menu .badge li.selected a {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 #sectionMyListings .container .listing-units-grp .card-sm {
