Added styling and media queries for '/lister/banned-users.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -438,6 +438,14 @@
     .section-listing-images {
         padding: 0;
     }
+
+    .section-read .item .user-grp {
+        flex-wrap: wrap;
+    }
+
+    .section-read .item .user-grp .thumb {
+        margin: 10px;
+    }
 }
 
 @media(max-width: 408px) {
