--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -585,6 +585,10 @@ select.btn-dropdown {
     border: 1px solid #666;
 }
 
+.section-read .item .user-grp .details .timestamp {
+    font-size: .9rem;
+}
+
 .txt-six-line {
     padding: 5px 0;
     overflow: hidden;
