Added media query for 'max-width: 800px' for '#dashNavLister.dash-nav'in 'lister/dashboard.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -104,6 +104,12 @@
     }
 }
 
+@media(max-width: 800px) {
+    .section-dash #dashNavLister.dash-nav ul {
+        justify-content: flex-start;
+    }
+}
+
 @media(max-width: 768px) {
     #section-listings .container, #section-marketing .container,
     .section-listings .container{
