Added HTML markup to '/admin/listing-applications-logs.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -326,9 +326,9 @@
         grid-template-columns: 1fr;
     }
 
-    .table-grp {
+    /* .table-grp {
         overflow-x:auto;
-    }
+    } */
 }
 
 @media(max-width: 499px) {
