Added HTML markup to '/admin/manage-listings-reviews.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -460,6 +460,10 @@
     #sectionTable {
         padding-top: 10px;
     }
+
+    #sectionManageReviews {
+        padding-top: 0;
+    }
 }
 
 @media(max-width: 408px) {
