Added initial HTML markup to '/admin/view-user-beginner.html' to 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -83,6 +83,10 @@
     .listing-info-aux .aux-grp .data {
         font-size: 1.0rem;
     }
+
+    #sectionUserProfile.section-user .container {
+        justify-content: space-between;
+    }
 }
 
 @media(max-width: 1024px) {
