--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -1273,3 +1273,37 @@ nav .nav-menu .badge li.selected a {
     white-space: nowrap;
 }
 
+/* Page - /view-user-*.html */
+.section-user .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.section-user .profile .card-user {
+    padding: 8px;
+    /* display: inline-block; */
+    max-width: 450px;
+    background-color: #ffe;
+}
+
+.section-user .profile .card-user .details {
+    display: flex;
+    flex-direction: row;
+}
+
+.section-user .profile .card-user .title {
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 1px dashed var(--color-font);
+    margin-bottom: 5px;
+}
+
+.section-user .profile .card-user .details img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    margin: 8px;
+    border: 1px solid var(--color-font);
+}
