Added styling for '/admin/manage-users.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -289,11 +289,13 @@
         justify-content: center;
     }
 
-    .section-listings#sectionMyListings .top-buttons .vertical {
+    .section-listings#sectionMyListings .top-buttons .vertical,
+    .section-users#sectionManageUsers .top-buttons .vertical {
         display: flex;
     }
     
-    .section-listings#sectionMyListings .top-buttons .horizontal {
+    .section-listings#sectionMyListings .top-buttons .horizontal,
+    .section-users#sectionManageUsers .top-buttons .horizontal {
         display: none;
     }
 }
