Added media queries for '/admin/manage-users.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -209,6 +209,12 @@
     }
 }
 
+@media(max-width: 753px) {
+    .section-users .cards {
+        justify-content: center;
+    }
+}
+
 @media(max-width: 720px) {
     #section-listings {
         padding-bottom: 30px;
