Added styling for '/admin/manage-zones.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -1319,3 +1319,16 @@ nav .nav-menu .badge li.selected a {
     align-items: center;
     justify-content: space-between;
 }
+
+/* Page - /admin/manage-zones.html */
+.section-zones .cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.section-zones .cards .card-generic {
+    max-width: 350px;
+}
