Added media queries for 'max-width:546px' for '/admin/manage-zones.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -350,6 +350,12 @@
     } */
 }
 
+@media(max-width: 546px) {
+    .section-zones .cards {
+        justify-content: center;
+    }
+}
+
 @media(max-width: 499px) {
     nav {
         flex-direction: column;
