Added media queries for '/admin/manage-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -207,6 +207,10 @@
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    .section-zones .panel-grp {
+        grid-template-columns: 1fr;
+    }
 }
 
 @media(max-width: 753px) {
@@ -354,6 +358,10 @@
     .section-zones .cards {
         justify-content: center;
     }
+
+    .section-zones .panel .cards {
+        justify-content: space-between;
+    }
 }
 
 @media(max-width: 499px) {
@@ -487,6 +495,10 @@
     }
 
     #sectionManageReviews {
+        padding-top: 0;
+    }
+
+    #sectionViewZone {
         padding-top: 0;
     }
 }
