Added media queries for 'max-width:941px'  for '/admin/manage-sub-zone.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/queries.css
+++ b/BeginnersPad v2/styles/queries.css
@@ -110,7 +110,8 @@
         grid-template-columns: 1fr 1fr;
     }
 
-    .section-listing-reviews .reviews-list {
+    .section-listing-reviews .reviews-list,
+    .listing-units-grp#sectionZoneListingUnits {
         grid-template-columns: 1fr;
     }
 }
