--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -139,7 +139,7 @@ button, .btn {
     z-index: 17;
 }
 
-.fab {
+.fab-container .fab {
     font-family: inherit;
     padding: 15px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.9);
