Added styling for '/admin/manage-tag.html' in 'Beginners Pad v2'.

--- a/BeginnersPad v2/styles/style.css
+++ b/BeginnersPad v2/styles/style.css
@@ -541,7 +541,8 @@ nav .nav-menu .badge li.selected a {
 
 .section-listing-secondary .panel-grp,
 .section-unit-secondary .panel-grp,
-.section-zones .panel-grp {
+.section-zones .panel-grp,
+.section-tag .panel-grp {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
