--- a/BeginnersPad v2/styles/utilities.css
+++ b/BeginnersPad v2/styles/utilities.css
@@ -300,6 +300,10 @@ button, .btn {
     text-transform: capitalize;
 }
 
+.section-title .lowercase {
+    text-transform: lowercase;
+}
+
 /* Links */
 #section-links {
     padding: 0 50px;
